--- a/RPGPlugin/Torch GUI/EditItemWindow.xaml
+++ b/RPGPlugin/Torch GUI/EditItemWindow.xaml
@@ -105,10 +105,10 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Content="Ore name:" Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}"/>
+        <Label Content="Item name:" Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}"/>
         <TextBox x:Name="ItemNameTextBox" Grid.Column="1" Grid.Row="0" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
 
-        <Label Content="Exp per ore:" Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}"/>
+        <Label Content="Exp per Item:" Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}"/>
         <TextBox x:Name="ExpPerItemTextBox" Grid.Column="1" Grid.Row="1" Margin="10" Style="{DynamicResource TextBoxStyle1}" SelectionBrush="DarkSlateGray" FontWeight="Bold"/>
 
         <Button Content="SAVE" Grid.Row="2" HorizontalAlignment="Center" Margin="0,10,0,54" Click="AddButton_Click" Width="73" Style="{DynamicResource ButtonStyle}" FontWeight="Bold"/>
