--- a/RPGPlugin/Torch GUI/RPGPluginControl.xaml
+++ b/RPGPlugin/Torch GUI/RPGPluginControl.xaml
@@ -79,22 +79,41 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TabControl Grid.Row="1" Grid.ColumnSpan="2">
+        <TabControl Name="SettingsTab">
             <TabItem Header="Main" Style="{StaticResource TabItemStyle}" IsSelected="True">
                 <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20"/> <!-- Spacer to make easy aligning without margins -->
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="400"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="20"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
-
-                    <Button Style="{StaticResource DonateButtonStyle}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="Donate_Click" Margin="0,0,10,10"/>
-
-                    <ToggleButton x:Name="BroadcastLevelUpToggleButton" Style="{StaticResource ToggleButtonStyle1}" Margin="112.333,16,0,0" Checked="BroadcastLevelUpToggleButton_Checked" Unchecked="BroadcastLevelUpToggleButton_Unchecked" VerticalAlignment="Top" HorizontalAlignment="Left"/>
-                    <TextBlock HorizontalAlignment="Left" Height="13.25" Margin="10,19.75,0,0" TextWrapping="Wrap" Text="NOTIFICATIONS LVLUP" VerticalAlignment="Top" Width="97.333" FontSize="9" TextAlignment="Center" FontWeight="Bold" Foreground="Black"/>
-                    <Button HorizontalAlignment="Right" Height="64" Margin="0,10,10,0" VerticalAlignment="Top" Width="64" Style="{StaticResource supportbutton}" Click="SupportButton_Click"/>
+                    <StackPanel Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="6" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Button Style="{StaticResource DonateButtonStyle}" Click="Donate_Click" Margin="-130,0,0,10" />
+                        <Button Height="64" Width="64" Style="{StaticResource supportbutton}" Click="SupportButton_Click" Margin="10"/>
+                    </StackPanel>
+                    
+                    <TextBlock Grid.Column="1" Grid.Row="1" Text="NOTIFICATIONS LVLUP" VerticalAlignment="Center" Margin="5"/>
+                    <ToggleButton Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" x:Name="BroadcastLevelUpToggleButton" Style="{StaticResource ToggleButtonStyle1}" Checked="BroadcastLevelUpToggleButton_Checked" Unchecked="BroadcastLevelUpToggleButton_Unchecked" Margin="5"/>
+                    
+                    <TextBlock Grid.Column="1" Grid.Row="2" Text="Plugin Base Save Location" Margin="5"/>
+                    <TextBox Name="BaseSaveLocation" Grid.Column="2" Grid.Row="2" Margin="5" Text="{Binding SaveLocation}"/>
+                    <TextBlock Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Text="This is where all Class configurations and player data will be saved.  Using a network location allows this to be used across multiple instances (Nexus)." TextWrapping="WrapWithOverflow"/>
 
                 </Grid>
             </TabItem>
